--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,10 +13,10 @@ app:
         # NOTE: Use environment variables for sensitive keys in production
         # Example: api-key: ${WEATHERSTACK_API_KEY}
         api-key: "a32b6e9c2990579ed49552b90070e915"
-        url: "http://api.weatherstack.com/current"
+        url: "https://api.weatherstack.com/current"
       openweathermap:
         api-key: "ce8ab766adf183fbbe5d9e16916e59bb"
-        url: "http://api.openweathermap.org/data/2.5/weather"
+        url: "https://api.openweathermap.org/data/2.5/weather"
 
 # Spring Cache Configuration
 spring:
@@ -31,6 +31,13 @@ logging:
   level:
     com.zai.weatherchallenge: DEBUG
     org.springframework.web: INFO
+
+# Actuator configuration to expose the health endpoint for Docker health checks
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "health"
 
 ---
 spring:
@@ -48,7 +55,7 @@ app:
         # NOTE: Use environment variables for sensitive keys in production
         # Example: api-key: ${WEATHERSTACK_API_KEY}
         api-key: "a32b6e9c2990579ed49552b90070e915"
-        url: "http://api.weatherstack.com/current"
+        url: "https://api.weatherstack.com/current"
       openweathermap:
         api-key: "ce8ab766adf183fbbe5d9e16916e59bb"
-        url: "http://api.openweathermap.org/data/2.5/weather"
+        url: "https://api.openweathermap.org/data/2.5/weather"
